<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.f6.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.f6.ui.gallery.GalleryFragment"
        android:label="@string/menu_world"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.f6.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_comp"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_prog"
        android:name="com.example.f6.ui.prog.ProgFragment"
        android:label="@string/menu_prog"
        tools:layout="@layout/fragment_prog" />
</navigation>